<resources>
    <string name="app_name">DAGR</string>
    <string name="tab_text_1">Fill a Radio</string>
    <string name="tab_text_2">Map</string>
    <string name="net">123</string>
    <string name="net_label">Net:</string>
    <string name="julian_date">1</string>
    <string name="julian_date_label">Julian Date:</string>
    <string name="freq">FREQ:</string>
    <string name="freq_text">123</string>
    <string name="map_fragment">MAP FRAGMENT</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="zulu_time_label">Zulu Time:</string>
    <string name="zulu_time">2400</string>
    <string name="title">How to load radios with SKL &amp; radio powered on: </string>
    <string name="step1">Step 1: Change function switch to LD (LOAD)</string>
    <string name="step2">Step 2: Change CHANNEL to MAN (CHANNEL 0)</string>
    <string name="step3">Step 3: Attach fill cable to fill</string>
    <string name="step4">Step 4: Select RADIO FILL on SKL (name may say SINGARS)</string>
    <string name="step5">Step 5: Tap "LOAD" icon </string>
    <string name="step6">Step 6: Follow prompts on SKL</string>
    <string name="success">--Operation Successful--</string>
    <string name="step7">Step 7: Press TIME key on radio </string>
    <string name="step8">Step 8: Enter last 2 digits of Julian Day (see above)</string>
    <string name="step9">Step 9: Enter Zulu time on next minute </string>
    <string name="step10">Step 10: Press "STO" when seconds hit 0</string>
    <string name="step11">Step 11: Select proper net to conduct radio check (will be provided by higher command)</string>
    <string name="step12"></string>
</resources>